--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- NAVBAR -->
     <header class="navbar">
         <div class="logo-area">
-            <div class="logo-icon"><img src="image/pp bot.png" alt=""></div>
+            <div class="logo-icon"><img src="image/logo.png" alt=""></div>
             <div class="logo-text">
                 <h1>꧋ꦧꦸꦱꦤꦗꦮ</h1>
                 <p>Raras, Adiluhung, lan Kagunan Budaya</p>
@@ -22,10 +22,10 @@
         </div>
 
         <nav class="nav-menu">
-            <a href="#">Ngarep</a>
-            <a href="#">Anggota</a>
-            <a href="#">Jenis</a>
-            <a href="#">Pungkasan</a>
+            <a href="#">ꦔꦫꦼꦥ꧀</a>
+            <a href="#">ꦲꦁꦒꦺꦴꦠ</a>
+            <a href="#">ꦗꦼꦤꦶꦱ꧀</a>
+            <a href="#">ꦥꦸꦁꦏꦱꦤ꧀</a>
         </nav>
     </header>
 
@@ -49,37 +49,73 @@
         <div class="anggota-row">
 
             <div class="anggota-card">
-                <div class="anggota-foto"></div>
+                <div class="anggota-top">
+                    <div class="anggota-foto">
+                        <img src="" alt="">
+                    </div>
+                     <h1>ꦄꦂꦥ꦳</h1>
+                </div>
+
                 <h3>Aqiela Sena Raifa T.</h3>
                 <p>Presensi 09</p>
             </div>
 
             <div class="anggota-card">
-                <div class="anggota-foto"></div>
+                <div class="anggota-top">
+                    <div class="anggota-foto">
+                        <img src="" alt="">
+                    </div>
+                     <h1>ꦄꦂꦗꦸꦤ</h1>
+                </div>
+
                 <h3>Arjuna Pratama</h3>
                 <p>Presensi 10</p>
             </div>
 
             <div class="anggota-card">
-                <div class="anggota-foto"></div>
+                <div class="anggota-top">
+                    <div class="anggota-foto">
+                        <img src="" alt="">
+                    </div>
+                     <h1>ꦄꦂꦪ</h1>
+                </div>
+
                 <h3>Arya Pradipta B.</h3>
                 <p>Presensi 12</p>
             </div>
 
             <div class="anggota-card">
-                <div class="anggota-foto"></div>
+                <div class="anggota-top">
+                    <div class="anggota-foto">
+                        <img src="" alt="">
+                    </div>
+                     <h1>ꦮꦧꦽꦤ꧀</h1>
+                </div>
+
                 <h3>Athaya Sabreen</h3>
                 <p>Presensi 13</p>
             </div>
 
             <div class="anggota-card">
-                <div class="anggota-foto"></div>
+                <div class="anggota-top">
+                    <div class="anggota-foto">
+                        <img src="" alt="">
+                    </div>
+                     <h1>ꦲꦶꦠꦺꦴ</h1>
+                </div>
+
                 <h3>Hito Mustaqim</h3>
                 <p>Presensi 30</p>
             </div>
 
             <div class="anggota-card">
-                <div class="anggota-foto"></div>
+                <div class="anggota-top">
+                    <div class="anggota-foto">
+                        <img src="" alt="">
+                    </div>
+                     <h1>ꦏꦺꦤ꧀ꦗ꦳</h1>
+                </div>
+
                 <h3>Kenzie Faust G.</h3>
                 <p>Presensi 36</p>
             </div>
@@ -97,7 +133,8 @@
                 <div class="materi-content">
                     <img src="images/kebaya.jpg" alt="Busana Takwa">
                     <div class="materi-text">
-                        <h2>Busana Takwa</h2>
+                        <h2>꧋ꦧꦸꦱꦤꦠꦏ꧀ꦮ꧉</h2>
+                        <h1>Busana Takwa</h1>
                         <p>Penjelasan singkat</p>
                     </div>
                 </div>
@@ -107,7 +144,8 @@
                 <div class="materi-content">
                     <img src="images/batik.jpg" alt="Busana pranakan">
                     <div class="materi-text">
-                        <h2>Busana pranakan</h2>
+                        <h2>꧋ꦧꦸꦱꦤꦥꦿꦤꦏꦤ꧀꧉</h2>
+                        <h1>Busana pranakan</h1>
                         <p>Penjelasan singkat</p>
                     </div>
                 </div>
@@ -117,7 +155,8 @@
                 <div class="materi-content">
                     <img src="images/surjan.jpg" alt="Busana Atela">
                     <div class="materi-text">
-                        <h2>Busana Atela</h2>
+                        <h2>꧋ꦧꦸꦱꦤꦲꦠꦺꦭ꧉</h2>
+                        <h1>Busana Atela</h1>
                         <p>Penjelasan singkat</p>
                     </div>
                 </div>
@@ -127,7 +166,8 @@
                 <div class="materi-content">
                     <img src="images/beskap.jpg" alt="Busana Beskap">
                     <div class="materi-text">
-                        <h2>Busana Beskap</h2>
+                        <h2>꧋ꦧꦸꦱꦤꦧꦺꦱ꧀ꦏꦥ꧀꧉</h2>
+                        <h1>Busana Beskap</h1>
                         <p>Penjelasan singkat</p>
                     </div>
                 </div>
@@ -137,7 +177,8 @@
                 <div class="materi-content">
                     <img src="images/jarik.jpg" alt="Busana Antari">
                     <div class="materi-text">
-                        <h2>Busana Antari</h2>
+                        <h2>꧋ꦧꦸꦱꦤꦲꦤ꧀ꦠꦫꦶ꧉</h2>
+                        <h1>Busana Antari</h1>
                         <p>Penjelasan singkat</p>
                     </div>
                 </div>
@@ -147,7 +188,8 @@
                 <div class="materi-content">
                     <img src="images/blangkon.jpg" alt="Busana Sikepan">
                     <div class="materi-text">
-                        <h2>Busana Sikepan</h2>
+                        <h2>꧋ꦧꦸꦱꦤꦱꦶꦏꦼꦥꦤ꧀꧉</h2>
+                        <h1>Busana Sikepan</h1>
                         <p>Penjelasan singkat</p>
                     </div>
                 </div>
