--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         <nav class="nav-menu">
             <a href="#">ꦔꦫꦼꦥ꧀</a>
-            <a href="#">ꦲꦁꦒꦺꦴꦠ</a>
-            <a href="#">ꦗꦼꦤꦶꦱ꧀</a>
+            <a href="#anggota">ꦲꦁꦒꦺꦴꦠ</a>
+            <a href="#jenis">ꦗꦼꦤꦶꦱ꧀</a>
             <a href="#">ꦥꦸꦁꦏꦱꦤ꧀</a>
         </nav>
     </header>
@@ -38,13 +38,13 @@
         </p>
 
         <div class="hero-buttons">
-            <a class="btn gold" href="#">Anggota Kelompok</a>
-            <a class="btn blue" href="#">Busana Jawa</a>
+            <a class="btn gold" href="#anggota">Anggota Kelompok</a>
+            <a class="btn blue" href="#jenis">Busana Jawa</a>
         </div>
     </section>
 
     <!-- SECTION ANGGOTA -->
-    <section class="anggota-section">
+    <section id="anggota", class="anggota-section">
         <h1>꧋ꦲꦁꦒꦺꦴꦠꦏꦼꦭꦺꦴꦩ꧀ꦥꦺꦴꦏ꧀꧉</h1>
         <div class="anggota-row">
 
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section class="materi-section">
+    <section id="jenis", class="materi-section">
     <h1>꧋ꦗꦼꦤꦶꦱ꧀ꦗꦼꦤꦶꦱ꧀ꦧꦸꦱꦤꦗꦮ꧉</h1>
     <div class="materi-container">
         <button class="prev">&#10094;</button>
@@ -131,11 +131,20 @@
 
             <div class="materi-slide">
                 <div class="materi-content">
-                    <img src="images/kebaya.jpg" alt="Busana Takwa">
+                    <img src="image/taqwa.png" alt="Busana Takwa">
                     <div class="materi-text">
                         <h2>꧋ꦧꦸꦱꦤꦠꦏ꧀ꦮ꧉</h2>
                         <h1>Busana Takwa</h1>
-                        <p>Penjelasan singkat</p>
+                        <p> Busana takwa, utawi surjan, inggih menika ageman adat kakung kas  yogyakarta ingkang 
+                            ngagungani nilai tradisi lan makna religius ingkang kiyat. surjan dipunpitados dipundamel 
+                            dening sunan kalijaga lan terinspirasi saking tembung arab sirajan, ingkang gadhah artos cahaya utawi 
+                            penerang, mila pangagemipun dipunajeng-ajeng tansah tindak lebet kesaenan. ciri utami busana takwa 
+                            inggih menika bentukipun   ingkang rupinipun kemeja pamenthangan panjang kaliyan kerah jejeg lan motif 
+                            lurik bergaris vertikal. keunikan surjan papan ing  jumlah kancingipun ingkang sarat simbol spiritual: enem 
+                            kancing wonten perangan jaja melambangkan enem rukun iman, tiga kancing tersembunyi wonten perangan lebet 
+                            melambangkan tiga nafsu manungsa ingkang kedah dikendalikan, lan gangsal kancing wonten pamenthangan melambangkan 
+                            gangsal rukun islam. amargi makna filosofisipun   ingkang lebet, busana takwa mboten naming dados ageman adat, 
+                            nanging ugi  simbol pangemut  moral, ketakwaan, lan identitas budaya yogyakarta. </p>
                     </div>
                 </div>
             </div>
@@ -198,7 +207,14 @@
         </div>
         <button class="next">&#10095;</button>
     </div>
-</section>
+    </section>
+
+    <section class="akhir">
+        <h1>ꦥꦸꦁꦏꦱꦤ꧀</h1>
+        <div class="container">
+
+        </div>
+    </section>
 
 
     <script src="script.js"></script>
